# home-automation-server

./: .gitignore  Alarm.py  CeilingLights.py  Controller.py  ControllerCollection.py  Devices.py  GlobalState.py  IkeaRemote.py  MQTTClient.py  MqttClient.py  PowerOutlet.py  README.md  Remote.py  Scheduler.py  Server.py  Spotify.py  TimeFunctions.py  WoodLampController.py  Woodlamp.py  do  env-example.py  pyproject.toml  requirements-freeze.txt  requirements.txt  soco-poc.py
.githooks/: pre-commit
.github/workflows/: pipeline.yaml
Controller/: Alarm.py  CeilingLights.py  ControllerCollection.py  GlobalState.py  Spotify.py  Woodlamp.py
Device/: CeilingLights.py  ControllerCollection.py  Device.py  Woodlamp.py
Presets/: Preset.py
documentation/: home-automation-server.service  joining_zigbee.md
home_automation_server/: Alarm.py  GuiElement.py  MqttHandler.py  Remote.py  Scheduler.py  Server.py  env-example.py  main.py  main_test.py  server_test.py  soco-poc.py
home_automation_server/Device/: ControllerCollection.py  Device.py  EspNeopixelLight.py  GlobalState.py  Spotify.py  ZigbeeLight.py
home_automation_server/DeviceGroup/: DeviceGroup.py
home_automation_server/DeviceGroup/Kjeld/: __init__.py
home_automation_server/Presets/: Preset.py
home_automation_server/UserConfig/Jan/: ControllerCollection.py  DeviceConfig.py  __init__.py  configuration.yaml
home_automation_server/UserConfig/Kjeld/: ControllerCollection.py  (+4 more)
home_automation_server/templates/: alarm.html  index.html  spotify.html
home_automation_server/util/: TimeFunctions.py  ToggleList.py
stubs/apscheduler/: events.pyi  job.pyi  util.pyi
stubs/flask_apscheduler/: __init__.pyi  api.pyi  auth.pyi  json.pyi  scheduler.pyi  utils.pyi
templates/: ceiling_lights.html  global_state.html  index.html  led_strip_lamp.html  zigbee_light.html
util/: ToggleList.py
(+31 files in other folders)
